tests/repr/invalid-repr-width-2.stderr
error[E0277]: the trait bound `[(); 32]: IsU64Compatible` is not satisfied
 --> tests/repr/invalid-repr-width-2.rs:3:1
  |
3 | #[bitfield]
  | ^^^^^^^^^^^ the trait `IsU64Compatible` is not implemented for `[(); 32]`
  |
  = help: the trait `IsU64Compatible` is implemented for `[(); 64]`
  = help: see issue #48214
  = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
  = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)
